# tklon.com

./: .gitignore  Cargo.toml  Gemfile  Makefile  README.md  config.rb  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  webpack.config.js
.githooks/: pre-push
.github/: dependabot.yml  post-template.md
.github/workflows/: deploy.yml  new-post.yml  process-media.yml
deploy/: buildspec.yaml  buildspec.yml  params.yml  template.yaml  template.yml
deploy/lambda/: stats_report.py  test_stats_report.py
generator/: Cargo.toml  README.md
generator/src/: build.rs  config.rs  ingest.rs  main.rs  markdown.rs  media.rs  model.rs  serve.rs
site/: config.yml
site/data/: images.json  videos.json
site/source/images/: media-pipeline-test-1-750-8b3e8d66.avif  speedbox-cable-arrangement-1500-684d62c2.avif  speedbox-cable-arrangement-750-684d62c2.avif  speedbox-cable-config-1500-1e609d1b.avif  speedbox-cable-config-750-1e609d1b.avif  speedbox-motor-exposed-1500-cf0b2255.avif  (+5 more)
site/templates/: index.html  layout.html  notfound.html  page.html  post.html  tags.html
source/: 404.html.erb  tags.html.erb
source/layouts/: default.erb  post.erb
source/partials/: _banner.erb  _image.erb
source/stylesheets/: all.css.scss
source/typescripts/: tags.ts
src/: .browserslistrc  .gitignore  Gemfile  config.rb  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts  webpack.config.js
src/scripts/: _videos-shared.mjs  build-images.mjs  build-videos.mjs  check-videos.mjs
src/source/: 404.html.erb  index.html.erb  tags.html.erb
(+46 files in other folders)
